# restapi

./: .env.development  .env.example  .gitignore  .pre-commit-config.yaml  AUTHENTICATION_CONFIG_CLEANED.md  AUTH_MIGRATION_STATUS.md  Dockerfile  ENV_FILES_UPDATED.md  FASTAPI_DOCS_DEMO.md  MCP_CLAUDE_SETUP.md  MCP_QUICK_REFERENCE.md  MCP_SERVER_MODES.md  PASSTHROUGH_AUTH_MIGRATION.md  README.md  dataset-to-graph-transition-plan.md  debug_token.py  docker-compose.yml  main.py  pyproject.toml  test_auth_endpoint.py  test_auth_system.py  test_auth_system.sh  test_jwt_validation.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
app/: __init__.py
app/api/: __init__.py  main.py  mcp_server.py
app/api/v1/: __init__.py
app/api/v1/auth/: auth.py  passthrough_auth.py
app/api/v1/public/: __init__.py  datasets.py  frames.py  graphs.py  health.py  query.py
app/auth/: __init__.py  mcp_auth.py  middleware.py  models.py  passthrough.py  passthrough_middleware.py  passthrough_models.py  service.py
app/config/: __init__.py  app_config.py
app/core/: __init__.py  mcp_formatters.py
app/utils/: __init__.py  exceptions.py  xgt_operations.py  xgt_user_operations.py
docs/: MCP_integration.md  README.md  RocketGraph-API.postman_collection.json  TRANSFORMATION_LOG.md  api-design.md  api-developer-readme.md  architecture-overview.md  developer-api-guide.md  directory-structure.md  monitoring-auditing.md  openapi-spec.yaml  quick-start-guide.md  security-guidelines.md
docs/archive/: TRANSFORMATION_LOG.md
docs/design/: api-design.md  architecture-overview.md  authentication-strategy.md  directory-structure.md  security-guidelines.md
docs/development/: AUTHENTICATION_CONFIG_CLEANED.md  AUTH_MIGRATION_STATUS.md  SWAGGER_UI_AUTH_IMPROVED.md
docs/internal/: deployment-guide.md  monitoring-auditing.md  rate-limiting.md
docs/testing/: mock-vs-docker-analysis.md
examples/: claude_usage_examples.md  test_mcp_connection.py
requirements/: base.txt  development.txt  production.txt
scripts/: pytest-xgt.sh  run-ci-tests.py  run-ci-tests.sh
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_health_integration.py  test_xgt_datasets.py  test_xgt_graphs.py
tests/performance/: test_api_performance.py
tests/unit/: test_datasets.py  test_frames.py  test_graphs.py  test_health.py  test_mcp_graph_context.py  test_query.py
